// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLinkButton should render correctly with name and description 1`] = `
<a
  href="http://google.com"
  rel="noopener noreferrer"
  target="_blank"
>
  <button
    className="btn text-primary"
    type="button"
  >
    <div
      className="fab test mr-2"
    />
    <div
      className="underline-on-hover display-inline-block"
    >
      test
    </div>
  </button>
</a>
`;

exports[`ExternalLinkButton should render correctly with no props 1`] = `
<a
  rel="noopener noreferrer"
  target="_blank"
>
  <button
    className="btn text-primary"
    type="button"
  >
    <div
      className="fab undefined mr-2"
    />
    <div
      className="underline-on-hover display-inline-block"
    />
  </button>
</a>
`;
